--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,3 +12,9 @@
     align-items: center;
     justify-content: center;
 }
+
+.navBarItem {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bolder;
+}
