--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,7 +4,10 @@
     bottom:0;
     left:0;
     right:0;
-    margin:auto
+    margin:auto;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
 }
 
 h1 {
