--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -47,6 +47,23 @@ p {
     font-weight: bolder;
 }
 
+.navLink {
+    color: #fff;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    font-size: 1.3rem;
+    padding: 0 1rem;
+    height: 100%;
+    cursor: pointer;
+}
+.navLink:active {
+    color: #031d4d;
+}
+.navLink:hover {
+    color: #031d6e;
+}
+
 .homeIcon {
     padding: 10px 10px;
 }
