--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -113,3 +113,39 @@ p {
 #menuIcon {
     padding: 10px 20px;
 }
+
+.post-content {
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    padding: 0 20px;
+}
+
+.comment-section {
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    padding: 20px 20px;
+}
+
+.comment-box {
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    padding: 20px 20px;
+}
+
+.comment-box-content {
+    background-color: #15AD98;
+}
+
+.is-scrollLocked {
+    overflow: hidden;
+}
+
+.is-momentumScrollable {
+    -webkit-overflow-scrolling: touch;
+ }
