--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -88,6 +88,14 @@ p {
     line-height: normal;
 }
 
+img {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
 .blogBox img {
     position: absolute;
     height: 25vh;
@@ -112,6 +120,14 @@ p {
 
 #menuIcon {
     padding: 10px 20px;
+}
+
+.project-section {
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    padding: 20px 0;
 }
 
 .post-content {
