--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -134,6 +134,21 @@ img {
     padding: 20px 0;
 }
 
+.container {
+    display: grid;
+    grid-template-rows: fit-content() fit-content() fit-content();
+    box-sizing: border-box;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    margin:auto;
+    align-items: center;
+    justify-content: center;
+    max-width: 60em;
+    padding: 10px;
+  }
+
 .post-content {
     top:0;
     bottom:0;
@@ -173,4 +188,9 @@ img {
 
 .is-momentumScrollable {
     -webkit-overflow-scrolling: touch;
+ }
+
+ .quill {
+    height: 100%;
+    width: 100%;
  }
